# alt

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alt.toml.example  pyproject.toml
.claude/rules/: database-entries.md  issue-management.md  pii-policy.md
.claude/skills/cloud-scheduler/: SKILL.md
.claude/skills/daily-plan-cloud/: SKILL.md
.githooks/: pii-patterns.example  pre-commit
db/: atlas.hcl  load_env.py
db/migrations/: 20260409102730_baseline.sql  20260409103957_add_body_measurement_goals.sql  20260410024728_add_nutrition_tables.sql  20260426064110_universal_entries.sql  atlas.sum
db/schema/: body_measurement_goals.hcl  body_measurements.hcl  entries.hcl  nutrition_items.hcl  nutrition_logs.hcl  nutrition_targets.hcl  routine_events.hcl
src/alt_body/: __init__.py  cli.py  metrics.py  parser.py  storage.py
src/alt_db/: __init__.py  cli.py  connection.py  entries.py  nutrition_items.py  nutrition_logs.py  nutrition_targets.py  routines.py
src/alt_discord/: __init__.py  cli.py  poster.py  reader.py
src/alt_home_assistant/: __init__.py  cli.py  client.py
tests/: conftest.py  test_body_cli.py  test_body_storage.py  test_cli.py  test_connection.py  test_discord_cli.py  test_discord_poster.py  test_discord_reader.py  test_discord_threads.py  test_entries.py  test_ha_cli.py  test_ha_client.py  test_metrics.py  test_nutrition_items.py  test_nutrition_logs.py  test_nutrition_targets.py  test_parser.py  test_routines.py
webapp/: next.config.ts  package-lock.json  package.json  vitest.config.ts
webapp/src/: middleware.ts
(+46 files in other folders)
